--- a/res/style.css
+++ b/res/style.css
@@ -28,6 +28,14 @@ i.cube-DY {
     color: #970;
 }
 
+.container .row.riga1 {
+    min-height: 399px;
+}
+
+#bags {
+    min-height: 100px;
+}
+
 div#result-box {
     border: 1px solid black;
     background-color: antiquewhite;
